<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">
    <!--android:background="#ff3232"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.6"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.40">
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/peeritlogo"
                    android:scaleType="fitXY"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="17dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_weight="0.60">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#fff0ff"
                    android:layout_gravity="center"
                    android:text="@string/login_advert"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:theme="@style/TextLabel"
                        android:hint="@string/hint_email"
                        android:layout_weight="1">
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorTextActivated"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:hint="@string/hint_password"
                        android:theme="@style/TextLabel"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorTextActivated"/>
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/signin"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:text="Signin"
                        android:textSize="10sp"
                        android:gravity="center"
                        android:shadowRadius="0"
                        android:background="#ff423f"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="0.5">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:theme="@style/com_facebook_loginview_default_style"
                android:backgroundTint="@color/com_facebook_blue"
                android:layout_centerInParent="true"
                android:text="@string/com_facebook_loginview_log_in_button"
                android:textSize="12sp"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:backgroundTint="#ffffff"
                android:textColor="@color/com_facebook_blue"
                android:layout_below="@+id/facebook_login_button"
                android:text="@string/signup"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>